# python-pseudo-plugins

./: LICENSE  README.md  main.py
src/main_app/: base.py  plugin_loader.py  plugin_response.py  pyproject.toml
src/plugins/: column_count.py  fill_rate.py  pyproject.toml  row_count.py
