
[tool.poetry]
name = "plugins"
version = "0.0.0"
description = "example plugin library to show pseudo-plugin functionality"
authors = ["Matthew Meen"]
packages = [
    { include = "../plugins" },
]

[tool.poetry.dev-dependencies]
tox = "3.25.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"